crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/issue-336-repro.yml\")).args([\"--pedantic\"]).run()?"
snapshot_kind: text
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:6:3
  |
6 |   contents: write
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:5:1
  |
5 | / permissions:
6 | |   contents: write
  | |_________________- help: consider adding comments to document each permission's purpose
  |
  = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 1 low, 0 medium, 1 high
